--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,61 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<!-- Copyright (C) 2011 The Android Open Source Project
+
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
+
+          http://www.apache.org/licenses/LICENSE-2.0
+
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
+-->
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center|center_vertical"
-    android:layout_margin="20dp"
-    tools:context=".MainActivity">
-
-    <TextView
-        android:id="@+id/hello"
-        android:layout_margin="10dp"
-        android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+    <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:orientation="vertical"
+        android:padding="3mm">
 
-    <Button
-        android:id="@+id/startservice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="start"
-        android:layout_margin="10dp" />
+        <TextView style="@style/item" android:text="@string/address"/>
+        <EditText style="@style/item" android:id="@+id/address"/>
 
-    <Button
-        android:id="@+id/stopservice"
-        android:layout_margin="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="stop" />
+        <TextView style="@style/item" android:text="@string/port"/>
+        <EditText style="@style/item" android:id="@+id/port" android:inputType="number"/>
 
-    <Button
-        android:layout_margin="10dp"
-        android:id="@+id/bind_service"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Bind Service" />
+        <TextView style="@style/item" android:text="@string/secret"/>
+        <EditText style="@style/item" android:id="@+id/secret" android:password="true"/>
 
-    <Button
-        android:layout_margin="10dp"
-        android:id="@+id/unbind_service"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Unbind Service"
-        />
+        <TextView style="@style/item" android:text="@string/proxyhost"/>
+        <EditText style="@style/item" android:id="@+id/proxyhost"/>
 
+        <TextView style="@style/item" android:text="@string/proxyport"/>
+        <EditText style="@style/item" android:id="@+id/proxyport" android:inputType="number"/>
 
+        <TextView style="@style/item" android:text="@string/packages"/>
+        <RadioGroup
+            style="@style/item"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <RadioButton
+                android:id="@+id/allowed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/allowed"/>
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/disallowed"/>
+        </RadioGroup>
+        <EditText style="@style/item" android:id="@+id/packages"/>
 
-    <Button
-        android:id="@+id/startVpnService"
-        android:layout_width="131dp"
-        android:layout_height="93dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Connect" />
+        <Button style="@style/item" android:id="@+id/connect" android:text="@string/connect"/>
+        <Button style="@style/item" android:id="@+id/disconnect" android:text="@string/disconnect"/>
 
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
